--- a/index.html
+++ b/index.html
@@ -12,19 +12,16 @@
     <!--Favicon coding-->
     <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
 
-    <!--Links to CSS reset, Bootstrap, Google font, CSS, jQuery, and JavaScript-->
-    <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
+    <!--Link Bootstrap, Google font, and CSS-->
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" type="text/css" href="./assets/css/reset.css"> -->
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <link href="https://fonts.googleapis.com/css?family=Architects+Daughter&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-
-    <!-- Link to jQuery and JavaScript file -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="assets/javascript/game.js"></script>
 
 </head>
 
@@ -54,7 +51,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <p class="target-number"></p>
-                        <img class="target-image" src="assets/images/Target_Clipart.png">
+                        <img class="target-image" src="assets/images/Target_Clipart.png" alt="target drawing">
                     </div>
                 </div>
                 <div class="row">
@@ -68,7 +65,52 @@
                         <p class="losses-text p-4"></p>
                     </div>
                 </div>
+
+                <!--Modal for Win -->
+                <div class="modal fade" id="winModal" tabindex="-1" role="dialog" aria-labelledby="winModal"
+                    aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                CONGRATULATIONS! YOU WON!
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                Your mind is crystal clear, and Addition Problems don't seem to be a challenge for you!
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Play Again</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!--Modal for Loss -->
+                <div class="modal fade" id="lossModal" tabindex="-1" role="dialog" aria-labelledby="lossModal"
+                    aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                SO SORRY . . . YOU LOST.
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                You have gone over the target number. 
+                                <br>
+                                Please try again.
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Play Again</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+
             <div class="col-md-6 p-5 text-center">
                 <p>Choose a crystal:</p>
                 <div class="row">
@@ -78,14 +120,34 @@
                 </div>
             </div>
         </div>
-
+        
     </div>
+
     <div class="row">
         <div class="col-12">
             <p class="footer">Music courtesy of <a href="https://www.bensound.com" target="blank">www.bensound.com.</a>
             </p>
         </div>
+    </div>
 
+    <!-- JavaScript and jQuery links -->
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+
+    <script src="./assets/javascript/game.js"></script>
 </body>
 
 </html>
